[package]
name = "mapfanrs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0.66", features = ["backtrace"] }
clap = { version = "4.0.26", features = ["derive"] }
reqwest = "0.11.13"
serde = { version = "1.0.147", features = ["derive"] }
serde_json = "1.0.88"
serde_repr = "0.1.9"
tokio = { version = "1.22.0", features = ["full"] }
